# discussions

./: .gitignore  .ignore  Dockerfile  Makefile  README.md  TODO  captain-definition  docker-entrypoint.sh  docker-healthcheck.sh  manage.py  pyproject.toml  requirements.txt
browser-extension/: background-pageaction.js  background.js  manifest.json
browser-extension-v3/: background.js  manifest.json
discussions/: asgi.py  celery.py  settings.py  settings_dev.py  urls.py  wsgi.py
web/: admin.py  api_statistics.py  api_v0.py  apps.py  archiveis.py  category.py  celery_util.py  crawler.py  db.py  discussions.py  echojs.py  email.py  email_util.py  extract.py  feed.py  forms.py  hn.py  http.py  indexnow.py  jinja2.py  lobsters.py  ltu.py  mastodon.py  mastodon_api.py  mention.py  middleware.py  models.py  platform.py  rank.py  reading_list.py  reddit.py  reddit_subreddit_blacklist  reddit_subreddit_whitelist  seed.py  serializers.py  sitemaps.py  spam.py  statistics.py  stripe_util.py  tags.py  (+20 more)
web/jinja2/web/: mention_email_digest.txt
web/migrations/: 0000_create_extensions.py  0001_initial.py  0002_auto_20210307_1737.py  0003_discussion_gin_discussion_title.py  0004_auto_20210829_1924.py  0005_discussion_gin_discussion_title.py  0006_statistics.py  0007_alter_statistics_statistics.py  0008_alter_statistics_statistics.py  0009_tweet.py  0010_discussion_web_discuss_created_9d621d_idx.py  0011_remove_tweet_id_alter_tweet_tweet_id.py  0012_alter_tweet_tweet_id.py  0013_alter_discussion_platform_id_alter_discussion_score.py  0014_discussion_entry_created_at_and_more.py  0015_discussion_normalized_tags.py  0016_discussion_normalized_title.py  0017_discussion_gin_discussion_norm_title.py  0018_discussion_title_vector_and_more.py  0019_create_trigger.py  0020_tweet_bot_names.py  0021_remove_discussion_web_discuss_schemel_e43bc8_idx_and_more.py  0022_update_trigger.py  0023_alter_tweet_bot_names.py  0024_resource_resource_index_url_and_more.py  0025_resource_status_code.py  0026_link_resource_links_link_from_resource_and_more.py  0027_link_anchor_text_alter_link_anchor_title.py  0028_resource_normalized_title_resource_tags.py  0029_alter_resource_links.py  0030_resource_last_processed.py  0031_alter_tweet_bot_name.py  0031_remove_discussion_gin_discussion_title_and_more.py  0032_alter_discussion_scheme_of_story_url_and_more.py  0033_mastodonpost.py  0034_remove_discussion_index_schemeless_story_url_and_more.py  0035_trigger.py  0036_apiclient.py  0037_apiclient_email.py  0038_alter_apiclient_token.py  (+61 more)
web/static/: main.js  style.css  style.css.bak  style.scss
web/static/bootstrap/css/: bootstrap-grid.css  bootstrap-reboot.css  bootstrap-utilities.css  bootstrap.css
web/templates/: 404.html  500.html  robots.txt
web/templates/account/: base.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html
web/templates/ninja/: swagger copy.html  swagger.html
web/templates/web/: admin_statistics.html  api.html  base.html  bookmarklet.html  dashboard.html  dashboard_base.html  dashboard_mentions.html  dashboard_mentions_edit.html  dashboard_mentions_live_preview.html  discussions.html  discussions_bookmarklet.js  discussions_title_bookmarklet.js  extension.html  fragment_breadcrumbs.html  mention_email_digest.txt  mentions.html  new-ad.html  new_ad.html  new_ad_form.html  opensearch.xml  pricing.html  privacy-policy.html  reading_list_topic.html  search.html  social.html  statistics.html  support.html  terms.html  twitter.html  website.html  weekly_about_me.html  weekly_faq.html  weekly_fragment_follow.html  weekly_index.html  weekly_subscribe_confirm.txt  weekly_subscribe_confirmation.txt  weekly_subscribe_form.html  weekly_topic.html  weekly_topic_digest.txt  weekly_topic_week.html  (+5 more)
web/templatetags/: util.py
