[tool.poetry]
name = "discussions"
version = "0.1.0"
description = ""
authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]

[tool.poetry.dependencies]
archiveis = "^0"
bs4 = "^0"
CacheControl = "^0"
celery = "^5"
cleanurl = "*"
crispy-bootstrap5 = "^0"
daphne = "^4"
Django = "^4"
django-allauth = "^0.51"
django-celery-beat = "^2"
django-celerybeat-status = "^0"
django-crispy-forms = "^1"
django-debug-toolbar = "^3"
django-extensions = "^3.2.1"
django-ninja = "^0"
django-redis = "^5"
django-sass = "^1"
feedparser = "^6.0.10"
flower = "^1"
gevent = "^22"
igraph = "^0.10.1"
importlib-metadata="*"
Jinja2 = "^3.1.2"
lxml = "^4.6"
Markdown = "^3.3"
matplotlib = "^3.6.1"
minify-html = "^0"
networkx = "^2.8.7"
nltk = "^3.6"
praw = "^7.2"
psycopg2-binary = "^2.8"
python = "^3.11"
python-dateutil = "^2.8"
requests = "^2"
scipy = "^1.9.2"
sentry-sdk = "^1"
#setuptools = "59.0.6"
stripe = "^4.1.0"
tweepy = "^4"
urllib3 = "^1"
whitenoise = "^6"
zstandard = "*"
django-postgrespool2 = "^2.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "*"
black = "*"
bpython = "*"
celery-stubs = "*"
django-stubs = "*"
flake8 = "*"
ipython = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "discussions.settings"