[tool.poetry]
name = "discussions"
version = "0.1.0"
description = ""
authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]

[tool.poetry.dependencies]
archiveis = "^0"
bs4 = "^0"
CacheControl = "^0"
celery = "^5"
cleanurl = "*"
crawlerdetect = "*"
crispy-bootstrap5 = "^0"
daphne = "^4"
Django = "^4"
django-allauth = "^0"
django-celery-beat = "^2"
django-celerybeat-status = "^0"
django-crispy-forms = "*"
django-debug-toolbar = "*"
django-extensions = "^3"
django-ninja = "^0"
django-redis = "^5"
django-sass = "^1"
feedparser = "^6"
flower = "^1"
gevent = "^22"
igraph = "^0"
importlib-metadata="*"
Jinja2 = "^3"
lxml = "^4"
Markdown = "^3"
matplotlib = "^3"
minify-html = "^0"
networkx = "*"
nltk = "^3"
praw = "^7"
psycopg2-binary = "^2"
python = "^3.11"
python-dateutil = "^2"
requests = "^2"
scipy = "*"
sentry-sdk = "^1"
stripe = "^5"
tweepy = "^4"
urllib3 = "^1"
whitenoise = "^6"
zstandard = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
black = "*"
bpython = "*"
celery-stubs = "*"
django-stubs = {extras = ["compatible-mypy"], version = "^1"}
flake8 = "*"
ipython = "*"
mypy = "*"


[tool.poetry.group.types.dependencies]
types-markdown = "^3.4.2.5"
types-jinja2 = "^2.11.9"
types-requests = "^2.28.11.16"
types-stripe = "^3.5.2.8"
types-lxml = "^2023.2.11"
types-urllib3 = "^1.26.25.8"
types-python-dateutil = "^2.8.19.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "discussions.settings"